Bug 84028 - FILESAVE: PPTX: All caps property for text is not exported.
Summary: FILESAVE: PPTX: All caps property for text is not exported.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.6.2 release
Hardware: Other All
: medium normal
Assignee: Sushil Shinde
URL:
Whiteboard: BSA target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-18 06:47 UTC by Sushil Shinde
Modified: 2015-12-04 16:14 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Text with all capital letters. (34.76 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2014-09-18 06:47 UTC, Sushil Shinde
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sushil Shinde 2014-09-18 06:47:10 UTC
Created attachment 106477 [details]
Text with all capital letters.

Problem description: 
If all capital letters property is applied to text then it is not exported.
Steps to reproduce:
1. Create a presentation using MS Office 2007/2010.
2. Add some text and apply case property to it. (Fonts->all caps) and save as .pptx
3. Open .pptx file on latest LO master.
4. Save file as .pptx again from LO master.
5. Open saved file on MS Office again.
6. Text with all caps is exported as small letters.

Current behavior:
Text with all caps is rendered correctly but not exported correctly.

Expected behavior:
LO should export all caps property for text properly for .pptx files.

              
Operating System: Ubuntu
Version: 4.4.0.0.alpha0+ Master
Comment 1 ign_christian 2014-09-19 06:51:51 UTC
Reproduced with LO 4.2.6.3 and 4.3.1.2 portable under Win7 x86
Comment 2 Commit Notification 2014-09-24 00:46:01 UTC
sushil_shinde committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0a32edcdc2bda75a7536ce7f88c91cbc56e7afb1

fdo#84028 : Preserved all caps property for text.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 QA Administrators 2015-10-14 19:57:00 UTC
** Please read this message in its entirety before responding **

To make sure we're focusing on the bugs that affect our users today, LibreOffice QA is asking bug reporters and confirmers to retest open, confirmed bugs which have not been touched for over a year.

There have been thousands of bug fixes and commits since anyone checked on this bug report. During that time, it's possible that the bug has been fixed, or the details of the problem have changed. We'd really appreciate your help in getting confirmation that the bug is still present.

If you have time, please do the following:

   Test to see if the bug is still present on a currently supported version of LibreOffice (5.0.1 or preferably 5.0.2.2 or later)
   https://www.libreoffice.org/download/

   If the bug is present, please leave a comment that includes the version of LibreOffice and your operating system, and any changes you see in the bug behavior
 
 If the bug is NOT present, please set the bug's Status field to RESOLVED-WORKSFORME and leave a short comment that includes your version of LibreOffice and Operating System

Please DO NOT

   Update the version field
   Reply via email (please reply directly on the bug tracker)
   Set the bug's Status field to RESOLVED - FIXED (this status has a particular meaning that is not appropriate in this case)


If you want to do more to help you can test to see if your issue is a REGRESSION. To do so: 

1. Download and install oldest version of LibreOffice (usually 3.3 unless your bug pertains to a feature added after 3.3)

http://downloadarchive.documentfoundation.org/libreoffice/old/

2. Test your bug 
3. Leave a comment with your results. 
4a. If the bug was present with 3.3 - set version to "inherited from OOo"; 
4b. If the bug was not present in 3.3 - add "regression" to keyword


Feel free to come ask questions or to say hello in our QA chat: http://webchat.freenode.net/?channels=libreoffice-qa

Thank you for your help!

-- The LibreOffice QA Team This NEW Message was generated on: 2015-10-14
Comment 4 Buovjaga 2015-12-04 16:14:51 UTC
Yeah, seems to work now so FIXED per comment 2

Win 7 Pro 64-bit Version: 5.2.0.0.alpha0+
Build ID: 81fa5340191baf8687f9c82f1f414f5afc86b529
Threads 4; Ver: Windows 6.1; Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-12-03_21:19:19
Locale: fi-FI (fi_FI)