fdo#84028 : Preserved all caps property for text.

1. All capital letters were exported as small letters.
   2. Problem was 'cap' property was not exported for 'rPr'
      in drawingml.

Change-Id: I81bfb418f773aa88118b22550eea2b3ec2833ea9